Fixed problem with ContextMenu being hidden behind Dialog

--- a/Controls/ContextMenu/ContextMenu.css
+++ b/Controls/ContextMenu/ContextMenu.css
@@ -61,7 +61,7 @@ div.FitUiControlContextMenu.FitUiControlTreeView
 	{
 		display: inline-block;
 		position: absolute;
-		z-index: 1000;
+		z-index: 1300;
 
 		border: 1px solid #A9A9A9;
 		background-color: #FFFFFF;
